# clipper-db-queries

./: CMakeLists.txt  ImgNetBenchDockerfile  TfInceptionDockerfile
bench/imdb_bench/: setup_bench.sh
bench/imgnet_bench/: setup_bench.py  setup_bench.sh
containers/python/: tf_inception_container.py
containers/python/theano_lstm/: movie_lstm.py  theano_lstm_container.py
src/benchmarks/: CMakeLists.txt
src/libclipper/src/: metrics.cpp  rpc_service.cpp
tf_test/IMG_TUT/: imgnet_files_mapping.txt  inception_container_test.py  tf_inception_container.py
